Adicionados pacotes de português e algoritmo

--- a/template-kdmile.tex
+++ b/template-kdmile.tex
@@ -6,6 +6,8 @@
 \documentclass[kdmile,a4paper]{kdmile} % NOTE: kdmile is published on A4 paper
 \usepackage{graphicx,url}  % for using figures and url format
 \usepackage[T1]{fontenc}   % avoids warnings such as "LaTeX Font Warning: Font shape 'OMS/cmtt/m/n' undefined"
+\usepackage[brazilian]{babel}
+\usepackage{algorithm}
 
 %\usepackage{cite} % NOTE: do **not** include this package because it conflicts with kdmile.bst
 
