--- a/template-kdmile.tex
+++ b/template-kdmile.tex
@@ -90,6 +90,16 @@ The Symposium on Knowledge Discovery, Mining and Learning (KDMiLe) aims at integ
 
 \maketitle
 
+\makeatletter\renewcommand{\ALG@name}{Algoritmo} %% Translation of the title to Portuguese
+\section{Dummy Algorithm}
+\begin{algorithm}
+  \caption{Hello World!}
+  \label{alghelloworld}
+  \begin{algorithmic}
+    \STATE Hello World!
+  \end{algorithmic}
+\end{algorithm}
+
 
 % ARTICLE NEW SECTION
 \section{Call for Contributions}
