Add comando para  marcar palavras que precisam ser traduzidas

--- a/template-kdmile.tex
+++ b/template-kdmile.tex
@@ -26,6 +26,9 @@
 {\ttfamily\vspace{0.1in}\setlength{\parindent}{18pt}}
 {\vspace{0.1in}}
 
+% Para marcar palavras que precisam ser traduzidas
+\newcommand{\tr}[1]{\colorbox{MidnightBlue}{\textcolor{White}{\textbf{#1}}}}
+
 % ALL FIELDS UNTIL BEGIN{document} ARE MANDATORY
 
 
