Add tradução da ref ^Cada pra algoritmos

--- a/template-kdmile.tex
+++ b/template-kdmile.tex
@@ -29,6 +29,9 @@
 % Para marcar palavras que precisam ser traduzidas
 \newcommand{\tr}[1]{\colorbox{MidnightBlue}{\textcolor{White}{\textbf{#1}}}}
 
+%% Tradução para português da referência usada para algoritmos
+\makeatletter\renewcommand{\ALG@name}{Algoritmo}
+
 % ALL FIELDS UNTIL BEGIN{document} ARE MANDATORY
 
 
