Título como comando para substituir qdo definido

--- a/template-kdmile.tex
+++ b/template-kdmile.tex
@@ -29,6 +29,9 @@
 % Para marcar palavras que precisam ser traduzidas
 \newcommand{\tr}[1]{\colorbox{MidnightBlue}{\textcolor{White}{\textbf{#1}}}}
 
+% Substituir pelo título quando estiver definido
+\newcommand{\titulo}{Título}
+
 %% Tradução para português da referência usada para algoritmos
 \makeatletter\renewcommand{\ALG@name}{Algoritmo}
 
@@ -37,14 +40,14 @@
 
 % Includes headers with simplified name of the authors and article title
 \markboth{S. de Amo and A. P. L. de Carvalho and A. Plastino}
-{KDMiLe - Symposium on Knowledge Discovery, Mining and Learning}
+{\titulo}
 %  -> \markboth{}{}
 %         takes 2 arguments
 %         ex: \markboth{A.Plastino}{Any article title}
 
 
 % Title of the article
-\title{KDMiLe - Symposium on Knowledge Discovery, Mining and Learning}
+\title{\titulo}
 
 
 % List of authors
