Adicionadas palavras-chave

--- a/template-kdmile.tex
+++ b/template-kdmile.tex
@@ -84,7 +84,7 @@ The Symposium on Knowledge Discovery, Mining and Learning (KDMiLe) aims at integ
 
 
 % Article keywords
-\keywords{kdmile, template, data mining, machine learning}
+\keywords{aprendizado por reforço, motivação intrínseca, descoberta de macro-ações}
 %  -> \keywords{} (in alphabetical order \keywords{document processing, sequences,
 %                      string searching, subsequences, substrings})
 
