Melhor tradução da ref. usada para algoritmos

--- a/template-kdmile.tex
+++ b/template-kdmile.tex
@@ -33,7 +33,7 @@
 \newcommand{\titulo}{Título}
 
 %% Tradução para português da referência usada para algoritmos
-\makeatletter\renewcommand{\ALG@name}{Algoritmo}
+\floatname{algorithm}{Algoritmo}
 
 % ALL FIELDS UNTIL BEGIN{document} ARE MANDATORY
 
