Add pacote algorithmic

--- a/template-kdmile.tex
+++ b/template-kdmile.tex
@@ -8,6 +8,7 @@
 \usepackage[T1]{fontenc}   % avoids warnings such as "LaTeX Font Warning: Font shape 'OMS/cmtt/m/n' undefined"
 \usepackage[brazilian]{babel}
 \usepackage{algorithm}
+\usepackage{algorithmic}
 \usepackage[usenames,dvipsnames]{color}
 
 %\usepackage{cite} % NOTE: do **not** include this package because it conflicts with kdmile.bst
