Marca traduzíveis sem "box" (prbl^Cdvi)

--- a/template-kdmile.tex
+++ b/template-kdmile.tex
@@ -28,7 +28,8 @@
 {\vspace{0.1in}}
 
 % Para marcar palavras que precisam ser traduzidas
-\newcommand{\tr}[1]{\colorbox{MidnightBlue}{\textcolor{White}{\textbf{#1}}}}
+% \newcommand{\tr}[1]{\colorbox{MidnightBlue}{\textcolor{White}{\textbf{#1}}}}
+\newcommand{\tr}[1]{\textcolor{MidnightBlue}{\textbf{#1}}}
 
 % Substituir pelo título quando estiver definido
 \newcommand{\titulo}{Título}
