--- a/template-kdmile.tex
+++ b/template-kdmile.tex
@@ -101,93 +101,96 @@ The Symposium on Knowledge Discovery, Mining and Learning (KDMiLe) aims at integ
 \begin{algorithm}                      % enter the algorithm environment
 \caption{Algoritmo original}           % give the algorithm a caption
 \label{alg:original}                   % and a label for \ref{} commands later in the document
-\begin{algorithmic}[1]                    % enter the algorithmic environment
+\begin{algorithmic}[1]                 % enter the algorithmic environment
+    \REQUIRE{Inicializar $s_t,\ a_t,\ o_t,\ r^e_t,\ r^i_t$}
     \LOOP
-    %% \STATE $s_t \leftarrow$ estado atual
-    %% \STATE $a_t \leftarrow$ ação primitiva atual
-    %% \STATE $o_t \leftarrow$ macro-ação atual
-    %% \STATE $r^e_t \leftarrow$ recompensa extrínsica atual
-    %% \STATE $r^i_t \leftarrow$ recompensa intrínsica atual
     %% \STATE \\
-    %% \STATE Obter próximo estado $s_{t+1}$
+    \STATE Obter próximo estado $s_{t+1}$
     %% \STATE \\
     %% \STATE \\
-    %% \COMMENT{Lida com a possível ocorrência de um evento saliente}
-    %% \IF{ocorreu um evento saliente $e$}
-    %%     \IF{macro-ação para $e$, $o_e$, não existe em $O$}
-    %%         \STATE Criar $o_e$ em $O$
-    %%         \STATE Adicionar $s_t$ a $I^{o_e}$
-    %%         \STATE $\beta(s_{t+1}) \leftarrow 1$
-    %%     \ENDIF
-    %%     \STATE $r^i_{t+1} \leftarrow \tau[1-P(s_{t+1}|s_t)]$
-    %%     \COMMENT{$\tau$ constante}
-    %% \ELSE
-    %%     \STATE $r^i_{t+1} \leftarrow 0$
-    %% \ENDIF
+    \COMMENT{Lida com a possível ocorrência de um evento saliente}
+    \IF{ocorreu um evento saliente $e$}
+        \IF{macro-ação para $e$, $o_e$, não existe em $O$}
+            \STATE Criar $o_e$ em $O$
+            \STATE Adicionar $s_t$ a $I^{o_e}$
+            \STATE $\beta(s_{t+1}) \leftarrow 1$
+        \ENDIF
+        \STATE $r^i_{t+1} \leftarrow \tau[1-P(s_{t+1}|s_t)]$
+        \COMMENT{$\tau$ constante}
+    \ELSE
+        \STATE $r^i_{t+1} \leftarrow 0$
+    \ENDIF
     %% \STATE \\
     %% \STATE \\
-    %% \COMMENT{Atualiza o modelo de todas as macro-ações}
-    %% \FOR{cada macro-ação $o \neq o_e$ em $O$}
-    %%     \IF{$s_{t+1} \in I^o$}
-    %%         \STATE Adicionar $s_t$ a $I^o$
-    %%     \ENDIF
-    %%     \IF{$a_t$ é a ação \tr{greedy} para $o$ no estado $s_t$}
-    %%         %% \COMMENT{Atualiza o modelo probabilístico de transição da macro-ação}\
-    %%         \STATE $P(x|s_t) \xleftarrow{\alpha}
-    %%                [\gamma(1 - \beta^o(s_{t+1}))P^o(x|s_{t+1}) +
-    %%                \gamma\beta^o(s_{t+1})\delta_{s_{t+1}x}]$
+    \COMMENT{Atualiza o modelo de todas as macro-ações}
+    \FOR{cada macro-ação $o \neq o_e$ em $O$}
+        \IF{$s_{t+1} \in I^o$}
+            \STATE Adicionar $s_t$ a $I^o$
+        \ENDIF
+        \IF{$a_t$ é a ação \tr{greedy} para $o$ no estado $s_t$}
+            %% \COMMENT{Atualiza o modelo probabilístico de transição da macro-ação}\
+            \STATE $P(x|s_t) \xleftarrow{\alpha}
+                   [\gamma(1 - \beta^o(s_{t+1}))P^o(x|s_{t+1}) +
+                   \gamma\beta^o(s_{t+1})\delta_{s_{t+1}x}]$
 
-    %%         \COMMENT{Atualiza modelo de recompensa da macro-ação}
-    %%         \STATE $R^o(s_t) \xleftarrow{\alpha} [r^e_t + \gamma(1 - \beta^o(s_{t+1}))R^o(s_{t+1})]$
-    %%     \ENDIF
-    %% \ENDFOR
+            \COMMENT{Atualiza modelo de recompensa da macro-ação}
+            \STATE $R^o(s_t) \xleftarrow{\alpha} [r^e_t + \gamma(1 - \beta^o(s_{t+1}))R^o(s_{t+1})]$
+        \ENDIF
+    \ENDFOR
     %% \STATE \\
     %% \STATE \\
-    %% \COMMENT{Atualização da \tr{função valor estado-ação} do Q-Learning}
-    %% \STATE $Q_B(s_t, a_t) \xleftarrow{\alpha} r^e_{t} + \gamma(1 - \beta^o(s_{t+1}))R^o(s_{t+1})$
+    \COMMENT{Atualização da \tr{função valor estado-ação} do Q-Learning}
+    \STATE $Q_B(s_t, a_t) \xleftarrow{\alpha} r^e_{t} + \gamma(1 - \beta^o(s_{t+1}))R^o(s_{t+1})$
     %% \STATE \\
     %% \STATE \\
-    %% \COMMENT{Atualização da \tr{função valor estado-ação} para
-    %%   planejamento SMDP}
-    %% \FOR{cada macro-ação $o$ em $O$}
-    %% \STATE $Q_B(s_t, o) \xleftarrow{\alpha} R^o(s_t) + \sum_{x \in
-    %%     S}{P^o(x|s_t)\max_{a \in A \cup O}Q_B(x, a)}$
-    %% \ENDFOR
+    \COMMENT{Atualização da \tr{função valor estado-ação} para
+      planejamento SMDP}
+    \FOR{cada macro-ação $o$ em $O$}
+    \STATE $Q_B(s_t, o) \xleftarrow{\alpha} R^o(s_t) + \sum_{x \in
+        S}{P^o(x|s_t)\max_{a \in A \cup O}Q_B(x, a)}$
+    \ENDFOR
     %% \STATE \\
     %% \STATE \\
+
     %% TODO: parece que tem erro na linha abaixo (talvez o \tr...)
-    %% \COMMENT{Atualização das \tr{funções valor estado-ação} para
-    %%   as macro-ações}
+
+    %% \COMMENT{Atualização das \tr{funções valor estado-ação} para as macro-ações}
+
     \FOR{cada macro-ação $o$ em $O$ tal que $s_t \in I^o$}
         \newcommand{\sd}{$s_{t+1}$}
         \newcommand{\bo}[1]{$\beta^o($#1$)$}
-        \newcommand{\ubo}[1]{$1\ -\ $ \bo{#1}}
+        \newcommand{\ubo}[1]{$1\ -\ $\bo{#1}}
         \newcommand{\tv}{\tr{valor terminal para a option $o$}}
 
         \newcommand{\maxao}[1]{$\max_{a \in A \cup O}{$#1$}$}
         \newcommand{\maos}{\maxao{$Q^o($\sd$,\ a)$}}
         \newcommand{\maox}{\maxao{$Q^o(x,\ a)$}}
 
-        \newcommand{\termoA}{\bo{\sd} $\times$ \tv}
-        \newcommand{\termoB}{$($\ubo{\sd}$)\ \times$ \maos}
-
-        \STATE $a \leftarrow$ \termoA
-        \STATE $b \leftarrow$ \termoB
+        \newcommand{\termoA}{\bo{\sd}$v$}
+        \newcommand{\termoB}{$[$\ubo{\sd}$][$\maos$]$}
 
         \newcommand{\aalpha}{$\xleftarrow{\alpha}$}
-        \STATE $Q^o(s_t,\ a_t)$ \aalpha $\ r^e_t\ +\ \gamma(a\ +\ b)$
-        \FOR{cada macro-ação $o'$ em $O$ tal que $s_t \in I^{o'}$ e $o
-          \neq o'$}
+
+        \STATE $v \leftarrow$ \tv
+        \STATE $Q^o(s_t,\ a_t)$ \aalpha $\ r^e_t\ +\ \gamma\{$\termoA$\ +\ $\termoB$\}$
+
+        \FOR{cada macro-ação $o'$ em $O$ tal que $s_t \in I^{o'}$ e $o \neq o'$}
             \newcommand{\sumxes}[1]{$\sum_{x \in S}{$#1$}$}
-            \STATE $c \leftarrow$ \bo{$x$}$\ \times\ $\tv
-            \STATE $d \leftarrow$ $($\ubo{$x$}$)\ \times\ $ \maox
+            \newcommand{\termoC}{\bo{$x$}$v$}
+            \newcommand{\termoD}{$[$\ubo{$x$}$][$\maox$]$}
             \STATE $Q^o(s_t,\ o')$ \aalpha $R^{o'}(s_t)\ + $
-            \sumxes{$P^{o'}(x|s_t)$}$[c\ +\ d]$ 
-
-
-
-            \STATE Teste
+            \sumxes{$P^{o'}(x|s_t)$}$\{$$\termoC$\ +\ $\termoD$\}$
         \ENDFOR
+    \STATE Escolher $a_{t+1}$ através de estratégia \tr{$\epsilon$-greedy}
+    \STATE $r^e_{t+1} \leftarrow$ Recompensa extrínsica recebida na
+    transição $s_t,\ a_t \rightarrow$ \sd
+
+    \newcommand{\transita}[1]{$#1_t \leftarrow #1_{t+1}$}
+    \STATE \transita{s};\ 
+        \transita{a};\ 
+        \transita{r^e};\ 
+        \transita{r^i}\ 
+    \STATE Teste
     \ENDFOR
     \ENDLOOP
 \end{algorithmic}
