Organização das traduções pct algorithm

--- a/template-kdmile.tex
+++ b/template-kdmile.tex
@@ -29,6 +29,7 @@
 {\vspace{0.1in}}
 
 % Traduções ref. packaged 'algorithm[ic]'
+\floatname{algorithm}{Algoritmo} % termo utilizado na referenciação
 \renewcommand{\algorithmicrequire}{\textbf{Requer:}}
 \renewcommand{\algorithmicensure}{\textbf{Assegurar-se:}}
 \renewcommand{\algorithmicend}{\textbf{fim}}
@@ -58,9 +59,6 @@
 
 % Substituir pelo título quando estiver definido
 \newcommand{\titulo}{Título}
-
-%% Tradução para português da referência usada para algoritmos
-\floatname{algorithm}{Algoritmo}
 
 %% Melhores comentários para o pacote algorithm
 \renewcommand{\algorithmiccomment}[1]{// #1}
